deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription
  namespace: mindlet
  labels:
    app.kubernetes.io/name: subscription
    app.kubernetes.io/part-of: mindlet
spec:
  selector:
    app.kubernetes.io/name: subscription
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: grpc
      port: 50058
      targetPort: grpc
